Refactor project to clean up package dependencies.